<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/screenTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/token_normal_x"
        android:layout_marginTop="@dimen/token_normal_x"
        android:text="@string/fragment_new_pomodoro_name_screen_title"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputTextContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/screenTitle"
        app:layout_constraintBottom_toTopOf="@id/continueButton">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPomodoroName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/token_normal_x"
            android:layout_marginTop="@dimen/token_normal_x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="@string/fragment_new_pomodoro_name_text_field_hint"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPomodoroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_new_pomodoro_name_text_field_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewOptionsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/token_normal_x"
            android:layout_marginTop="@dimen/token_normal"
            android:text="@string/fragment_new_pomodoro_name_alternative_option_title"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPomodoroName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/optionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textViewOptionsTitle"
            app:layout_constraintVertical_bias="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/token_normal_x"
        android:enabled="false"
        android:text="@string/default_process_label"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>